# deploy-manifest-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: deploy.yaml
src/: error.rs  json.rs  lib.rs  main.rs  model.rs  parser.rs  toml.rs  validation.rs  yaml.rs
tests/: integration.rs
